# Crias-Server

./: .dockerignore  .gitignore  .shellcheckrc  LICENSE  README.md  ROADMAP.md  TUTORIAL.md  backup-cron.sh  config.env  diagnostico-erro-iso-crias-server.md  install.sh  mc-manager.sh  setup-cron.sh  start-server.sh
archiso-profile/: README.md  packages.x86_64  pacman.conf  profiledef.sh  sync-airootfs.sh
discord-agent/: .gitignore  Dockerfile  Makefile  NOTES.md  README.md  agent.example.yaml  go.mod
discord-bot/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
discord-bot/src/crias_bot/: __init__.py  __main__.py  agent_client.py  bot.py  config.py  embeds.py
discord-bot/tests/: conftest.py  test_agent_client.py  test_bot_helpers.py  test_config.py  test_embeds.py
docs/: CHANGELOG.md  Chunky.md  EssentialCommands.md  InstalacaoManual.md  README.md  StyledChat.md  Tailscale.md  hardware-tuning.md  restore.md  security.md  tutorial.md
docs/minecraft/: mods.md  (+1 more)
minecraft/: backup-cron.sh  install.sh  mc-manager.sh  minecraft.service  setup-cron.sh  start-server.sh
terraria/: backup-cron.sh  install.sh  setup-cron.sh  start-terraria.sh  terraria.service  tt-manager.sh
tests/: agent-install-hook-test.sh  arch-dry-install.sh  arch-smoke.sh  archiso-profile-validate.sh  backup-dry-run.sh  config-parser-eq-test.sh  config-parser.sh  envsubst-test.sh  install-contracts.sh  iso-embedded-scripts-validate.sh  iso-initramfs-validate.sh  iso-label-validate.sh  iso-live-credentials-validate.sh  iso-qemu-boot.sh  iso-qemu-validate.sh  minecraft-tuning-test.sh  qemu-log-parser-test.sh  quick-script-tests.sh  run-all.sh  setup-cron-manager-test.sh  stack-installer-test.sh  static-audit.sh  terraria-backup-dry-run.sh  terraria-tuning-test.sh
(+40 files in other folders)
