# discord-bot/pyproject.toml
#
# Configuração do projeto Python do bot Discord.
# Usa Poetry para gerenciamento de dependências.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crias-bot"
version = "0.1.0"
description = "Bot Discord para controle remoto do Crias-Server via gRPC"
authors = ["Vinicius Lopes <vinicius@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "crias_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
protobuf = "^4.25.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[tool.poetry.scripts]
crias-bot = "crias_bot.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

# Excluir código protobuf gerado (grpc_gen/) — é auto-gerado e não deve ser lintado.
# Nota: exclude só funciona quando ruff descobre paths (ruff check .), não quando
# paths são passados explicitamente (ruff check src/ tests/).
exclude = [
    "src/crias_bot/grpc_gen",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
